--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       rel="stylesheet"
     />
   </head>
-  <body class="h-screen font-poppins">
-    <div class="h-1/2 lg:h-screen xl:h-screen bg-gradient-to-t from-cyan-100">
+  <body class="font-poppins">
+    <div
+      class="h-1/2 lg:h-screen xl:h-screen bg-gradient-to-t from-cyan-100 relative overflow-hidden"
+    >
       <nav class="fixed top-0 w-full bg-transparent">
         <div class="container mx-auto py-5 flex items-center justify-between">
           <div class="flex items-center gap-2">
@@ -40,9 +42,78 @@
               <a href="#">Contact</a>
             </li>
           </ul>
+          <!-- hamburgerlines -->
+          <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
+            <div class="w-6 h-0.5 bg-black"></div>
+            <div class="w-6 h-0.5 bg-black"></div>
+            <div class="w-6 h-0.5 bg-black"></div>
+          </div>
+
+          <!-- hamburger popup menu -->
+          <ul
+            id="menu"
+            class="hidden bg-cyan-600 absolute left-0 top-0 w-full p-10 space-y-5 text-center rounded-b-3xl text-white"
+          >
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About Me</a>
+            </li>
+            <li>
+              <a href="#">Experience</a>
+            </li>
+            <li>
+              <a href="#">Projects</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
         </div>
       </nav>
-      <div></div>
     </div>
+    <!-- introduction -->
+    <div class="px-2">
+      <div
+        class="container mx-auto py-40 flex flex-col-reverse items-center lg:flex-row gap-20"
+      >
+        <!-- left -->
+        <div class="relative">
+          <div class="w-80 h-84 rounded-full overflow-hidden">
+            <img
+              class="object-cover h-full"
+              src="./img/headphoto.png"
+              alt="Rounded Image"
+            />
+          </div>
+        </div>
+        <!-- right  -->
+        <div class="my-auto flex flex-col gap-3">
+          <h1 class="text-cyan-800 font-bold uppercase">About Me</h1>
+          <h1 class="text-3xl font-medium">Nanjing University Graduate</h1>
+          <h1 class="text-3xl font-medium">Passion in Machine Learning / AI</h1>
+          <p class="text-gray-400">
+            I design and build digital products. I'm also a multi-disciplinary
+            maker with over 10 years of experiences in wide range of design
+            disciplines.
+          </p>
+          <h2 class="text-gray-400 font-medium">HTML</h2>
+          <div class="w-full bg-gray-200 h-1.5 rounded-md">
+            <div class="w-full bg-cyan-600 h-1.5 rounded-md"></div>
+          </div>
+          <h2 class="text-gray-400 font-medium">HTML</h2>
+          <div class="w-full bg-gray-200 h-1.5 rounded-md">
+            <div class="w-full bg-cyan-600 h-1.5 rounded-md"></div>
+          </div>
+          <h2 class="text-gray-400 font-medium">HTML</h2>
+          <div class="w-full bg-gray-200 h-1.5 rounded-md">
+            <div class="w-full bg-cyan-600 h-1.5 rounded-md"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
