--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>minsen's portfolio</title>
     <link rel="stylesheet" href="./output.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -166,9 +166,11 @@
               >July 2022 - September 2022</span
             >
             <p class="text-gray-700">
-              Brief description of your role, responsibilities, and key
-              achievements at this job. Highlight any special projects or skills
-              gained.
+              Developed a face mask detection model to enhance factory safety,
+              ensuring compliance with mask-wearing policies. Utilized LabelImg
+              for data annotation, accurately marking thousands of images to
+              create a high-quality dataset. Configured and fine-tuned YOLOv5
+              model parameters to optimize detection accuracy and performance.
             </p>
           </div>
         </div>
