--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
               <div class="p-6">
                 <h2 class="text-2xl font-semibold text-cyan-600">
-                  Online Retail Anaylsis
+                  Online Retail Analysis
                 </h2>
                 <p class="text-gray-700 mt-4">
                   This repository contains an analysis of an online retail
